--- a/oxide_powder_preparation/Einwaage.data.archive.yaml
+++ b/oxide_powder_preparation/Einwaage.data.archive.yaml
@@ -1,39 +1,6 @@
 data:
-  m_def: ../upload/raw/Einwaage.schema.archive.yaml#definitions/section_definitions/Sample #Powder_mixture
-  # preparation_date: 2022-07-05 10:00+01 #25.07.2022
-  # # # created_by: ganschow
-  # # execution_date: null
-  # # # created_by: Andrea
-  # # # created_by_test: Andrea
-  # # executed_by: null
-  # # final_sample: LiAlO2 #formula
-  # # total_mass: 120.0
-  # # notes: null
-  # SampleID:
-  #   institute: IKZ
-  #   sample_owner: ganschow
-  #   creation_datetime: 2022-12-31
-  #   sample_short_name: mypowder
-  # components:
-  #   - "../upload/raw/Zinc_Selenide.archive.yaml#data"
-  # sample_history:
-  #   comment: testy
-  name: a
-  method: simulation
-  synthesis_method: MOVPE
-  comment: a
-  iupac_name: a
-  empirical_formula: a
-  state_or_phase: cristalline solid
-  supplier: a
-  SampleID:
-    sample_id: fffffff
-  sample_history:
-    comment: a
-    method: a
-    dose: 2
-    experiment_identifier: '222'
-    process_steps:
-    - process_type: Process
-      name: pop
-      step_number: 1
+  m_def: ../upload/raw/Einwaage.schema.archive.yaml#Powder_mixture
+  components:
+    - ../upload/raw/Substance1.data.archive.yaml#data 
+    - ../upload/raw/SubstanceAndAmount.data.archive.yaml#data 
+    - ../upload/raw/Sample.data.archive.yaml#data 
