--- a/melt_czochralski_Dadzis/Sensors.archive.yaml
+++ b/melt_czochralski_Dadzis/Sensors.archive.yaml
@@ -5,6 +5,17 @@ definitions:
       base_sections:
       - nomad.parsing.tabular.TableData
       - nomad.datamodel.data.EntryData
+      m_annotations:
+        plot:
+          - label: My test plot label 1
+            x: value_timestamp_rel
+            y: 
+              - temperature_sensor_1/value_log
+              - pyrosensor_2/value_log
+          - label: My test plot label 2
+            x: value_timestamp_rel
+            y: 
+              - pyrosensor_2/value_log
       quantities:
         data_file:
           type: str
@@ -39,9 +50,14 @@ definitions:
       sub_sections:
         temperature_sensor_1:
           section:
+            m_annotations:
+              plot:
+                - label: My test plot label 1
+                  x: value_timestamp_rel
+                  y: value_log
             base_section: ../upload/raw/base_classes/sensor_0-0-1.schema.archive.yaml#Sensor  
             quantities:
-              value_log:  # The one we actually measurement
+              value_log:  # The one we actually measure
                 type: np.float64  # TODO try if that can be removed, it's already present in parent class
                 shape: ['*']
                 m_annotations:
@@ -49,11 +65,20 @@ definitions:
                     name: TE_1_K air 155 mm over crucible
                 description: Time history of sensor readings. May differ from setpoint
               value_timestamp_rel: 
-                type: '#/definitions/section_definitions/0/quantities/1'
+                type:                   
+                  type_kind: quantity_reference
+                  type_data: '#/definitions/section_definitions/0/quantities/1'
               value_timestamp_abs:
-                type: '#/definitions/section_definitions/0/quantities/2'
+                type:                   
+                  type_kind: quantity_reference
+                  type_data: '#/definitions/section_definitions/0/quantities/2'
         pyrosensor_2:
           section:
+            m_annotations:
+              plot:
+                - label: My test plot label 1
+                  x: value_timestamp_rel
+                  y: value_log
             base_section: ../upload/raw/base_classes/sensor_0-0-1.schema.archive.yaml#Sensor  
             quantities:
               emission:
@@ -81,8 +106,16 @@ definitions:
                 shape: ['*']
                 m_annotations:
                   tabular:
-                    name: my_header_5
+                    name: my_header_4
                 description: Time history of sensor readings. May differ from setpoint
+              value_timestamp_rel: 
+                type:                   
+                  type_kind: quantity_reference
+                  type_data: '#/definitions/section_definitions/0/quantities/1'
+              value_timestamp_abs:
+                type:                   
+                  type_kind: quantity_reference
+                  type_data: '#/definitions/section_definitions/0/quantities/2'
         # KEEP LISTING HERE SCHEMES FOR ALL THE SENSORS YOU HAVE
 data:
   m_def: Sensors_list
@@ -95,8 +128,8 @@ data:
     measured_property: your_field_here
     type: your_field_here
     notes: "TE_1_K air 155 mm over crucible"
-    value_timestamp_rel: "#/data"
-    value_timestamp_abs: "#/data"
+    value_timestamp_rel: '#/data/value_timestamp_rel'
+    value_timestamp_abs: '#/data/value_timestamp_abs'
   pyrosensor_2:
     model: your_field_here
     name: your_field_here
@@ -107,4 +140,6 @@ data:
     emission: 1
     transmission: 1
     t90: 0.1
+    value_timestamp_rel: '#/data/value_timestamp_rel'
+    value_timestamp_abs: '#/data/value_timestamp_abs'
   # KEEP LISTING HERE DATA FOR ALL THE SENSORS YOU HAVE
