experiment base class in movpe sto

--- a/movpe_STO/movpe_sto.data.archive.yaml
+++ b/movpe_STO/movpe_sto.data.archive.yaml
@@ -1,4 +1,5 @@
 data:  
   m_def: ../upload/raw/movpe_sto.schema.archive.yaml#MovpeSto_schema 
-  activities: 
+  history: 
+    activities:
     - ../upload/raw/process.archive.yaml#data
