--- a/movpe_STO/movpe_sto.data.archive.yaml
+++ b/movpe_STO/movpe_sto.data.archive.yaml
@@ -1,5 +1,10 @@
 data:  
-  m_def: ../upload/raw/movpe_sto.schema.archive.yaml#MovpeSto_schema 
+  m_def: ../upload/raw/movpe_sto.schema.archive.yaml#MovpeSto_experiment 
+  users:
+    responsible_person:
+      - user_id: "8e6f6796-d4f0-409a-85d2-1b8810c8c3a1"
   history: 
     activities:
     - ../upload/raw/process.archive.yaml#data
+    - ../upload/raw/HRXRD_measurement.archive.yaml#data
+    
