oxide preparation schema name

--- a/oxide_powder_preparation/Einwaage.data.archive.yaml
+++ b/oxide_powder_preparation/Einwaage.data.archive.yaml
@@ -1,5 +1,5 @@
 data:
-  m_def: ../upload/raw/Einwaage.schema.archive.yaml#Powder_mixture
+  m_def: ../upload/raw/Einwaage.schema.archive.yaml#Powder_sample
   components:
     - ../upload/raw/Substance1.data.archive.yaml#data 
     - ../upload/raw/SubstanceAndAmount.data.archive.yaml#data 
