oxide preparation workflow

--- a/oxide_powder_preparation_workflow/Thermal_treatment.data.archive.yaml
+++ b/oxide_powder_preparation_workflow/Thermal_treatment.data.archive.yaml
@@ -21,3 +21,8 @@ data:
       step_comment:
       step_duration:
       elapsed_time:
+    - step_number:
+      step_comment:
+      step_duration:
+      elapsed_time:
+
