added IR cameras to mel Czochralski

--- a/melt_czochralski_Dadzis/IRcameras.archive.yaml
+++ b/melt_czochralski_Dadzis/IRcameras.archive.yaml
@@ -29,7 +29,7 @@ definitions:
         - nomad.datamodel.data.EntryData
       m_annotations:
         eln: 
-          dict()
+          lane_width: 200px
       sub_sections:
         ir_camera:
           repeats: true
