--- a/float_zone_IKZ/fz_IKZ.data.archive.yaml
+++ b/float_zone_IKZ/fz_IKZ.data.archive.yaml
@@ -1,25 +1,27 @@
 # example data file for Float zone process at IKZ
 data:  
-  m_def: ../upload/raw/fz_IKZ.schema.archive.yaml#FZ_IKZ_schema
-  user: #section name - not to be filled
-    - role: Operator , siupervisors
-      name: Iryna
-      affiliation_institution: Leibniz Institut für Kristallzüchtung
-      affiliation_group: FZ
-      address:
-      email:
-      orcid:
-      telephone_number:
-  instrument:
-    #furnace_type: 1505/1
-    vacuum_before_process_HV: 50000
-    #furnace_leak_rate: good
-    inductor:
-      inductor_id: 1
-      inductor_drawing: #"<p><span style=\"background-color: #fbeeb8;\">lrtsjdrsgj</span></p>"
-    reflector:
-      reflector_id: 2
-      reflector_inductor_position: 0.1
-  process:
-    digital_protocol:
-      data_file: FZ.xlsx
+  m_def: ../upload/raw/fz_IKZ.schema.archive.yaml#FZ_IKZ_experiment
+  # instrument:
+  #   #furnace_type: 1505/1
+  #   vacuum_before_process_HV: 50000
+  #   #furnace_leak_rate: good
+  #   inductor:
+  #     inductor_id: 1
+  #     inductor_drawing: #"<p><span style=\"background-color: #fbeeb8;\">lrtsjdrsgj</span></p>"
+  #   reflector:
+  #     reflector_id: 2
+  #     reflector_inductor_position: 0.1
+  # process:
+  #   digital_protocol:
+  #     data_file: FZ.xlsx
+  tasks:
+    - m_def: ../upload/raw/fz_IKZ.schema.archive.yaml#Assembly
+      name: Assembly
+    - m_def: ../upload/raw/fz_IKZ.schema.archive.yaml#Pumping
+      name: Pumping
+    - m_def: ../upload/raw/fz_IKZ.schema.archive.yaml#Filling
+      name: Filling
+    - m_def: ../upload/raw/fz_IKZ.schema.archive.yaml#Annealing
+      name: Annealing
+    - m_def: ../upload/raw/fz_IKZ.schema.archive.yaml#Preheating
+      name: Preheating
