--- a/directional_solidification_IKZ/directional_solid.data.archive.yaml
+++ b/directional_solidification_IKZ/directional_solid.data.archive.yaml
@@ -3,8 +3,10 @@ data:
   users:
     responsible_person:
       - user_id: "8e6f6796-d4f0-409a-85d2-1b8810c8c3a1"
-  history: 
-    activities:
-      - ../upload/raw/einwaage.data.archive.yaml#data
-      - ../upload/raw/process.archive.yaml#data
-      - ../upload/raw/logfile.archive.yaml#data
+  tasks: 
+    - m_def: ../upload/raw/base_classes.schema.archive.yaml#TaskReference 
+      name: "Logfile"
+      task: ../upload/raw/logfile.archive.yaml#data
+    - m_def: ../upload/raw/base_classes.schema.archive.yaml#TaskReference 
+      name: "Rezeptur"
+      task: ../upload/raw/recipe.archive.yaml#data
