--- a/movpe_STO/movpe_sto.data.archive.yaml
+++ b/movpe_STO/movpe_sto.data.archive.yaml
@@ -7,12 +7,10 @@ data:
     # - ../upload/raw/process.archive.yaml#data
     # - ../upload/raw/HRXRD_measurement.archive.yaml#data
     - m_def: ../upload/raw/base_classes.schema.archive.yaml#TaskReference 
-      name: "Epitaxial Growth"
+      name: "Epitaxial Growth Reference"
       task: ../upload/raw/process.data.archive.yaml#data
-    - m_def: ../upload/raw/base_classes.schema.archive.yaml#TaskReference 
-      name: "Deposition Control"
-      task: ../upload/raw/deposition_control.archive.yaml#data
     - m_def: ../upload/raw/movpe_sto.schema.archive.yaml#Process_movpesto
+      name: Epitaxial Growth
       data_file: datafile.xlsx
       id: "22-01-21-MA-255"
       location:
@@ -22,3 +20,11 @@ data:
       film:
       o2_ar:
       notes: "films can be stoichiometric or off-stoichiometric. Cation ratios in absolute numbers see Precursor"
+    - m_def: ../upload/raw/movpe_sto.schema.archive.yaml#Deposition_control
+      name: Deposition Control
+      data_file: datafile.xlsx
+    - m_def: ../upload/raw/movpe_sto.schema.archive.yaml#Measurement_hrxrd
+      name: HR XRD Characterization
+      data_file: datafile.xlsx
+    - m_def: ../upload/raw/movpe_sto.schema.archive.yaml#AFM_measurements
+      name: AFM Characterization
