--- a/movpe_CNR/movpe_cnr.data.archive.yaml
+++ b/movpe_CNR/movpe_cnr.data.archive.yaml
@@ -1,6 +1,6 @@
 data:  
   m_def: ../upload/raw/movpe_cnr.schema.archive.yaml#Movpe_experiment 
-  data_file: datafile.xlsx
+  data_file: Parma_datafile_nomad.xlsx
   users:  #section name - not to be filled
     responsible_person: 
       - user_id: 5c87d4dd-5b6a-4759-9946-fff9bbd7cd44
@@ -8,15 +8,18 @@ data:
   # - m_def: ../upload/raw/base_classes.schema.archive.yaml#TaskReference 
   #   name: "Epitaxial Growth Reference"
   #   task: ../upload/raw/process.data.archive.yaml#data
-  - m_def: ../upload/raw/movpe_cnr.schema.archive.yaml#Process_movpe
+  - m_def: ../upload/raw/movpe_cnr.schema.archive.yaml#Setup
+    name: Setup
+    data_file: Parma_datafile_nomad.xlsx
+  - m_def: ../upload/raw/movpe_cnr.schema.archive.yaml#Growth_run
     name: Epitaxial Growth
-    data_file: datafile.xlsx
-  - m_def: ../upload/raw/movpe_cnr.schema.archive.yaml#Deposition_control
-    name: Deposition Control
-    data_file: datafile.xlsx
+    data_file: Parma_datafile_nomad.xlsx
   - m_def: ../upload/raw/movpe_cnr.schema.archive.yaml#Measurement_hrxrd
     name: HR XRD Characterization
-    data_file: datafile.xlsx
+    data_file: Parma_datafile_nomad.xlsx
   - m_def: ../upload/raw/movpe_cnr.schema.archive.yaml#AFM_measurements
     name: AFM Characterization
-    data_file: datafile.xlsx
+    data_file: Parma_datafile_nomad.xlsx
+  inputs:
+  - name: my substrate
+    reference: ../upload/raw/Substrate.data.archive.yaml
